# Lua_with_Cpp

./: .gitignore  CMakeLists.txt  build.sh  readme
lua-and-cpp/: CMakeLists.txt  a.cpp  callback.cpp  readme
officalTutorialExamples/: 24.1.cpp  2423.cpp  25.cpp  251.cpp  252.cpp  253.cpp  261.cpp  CMakeLists.txt  common.cpp  common.h  run2.sh
officalTutorialExamples/scripts/: calledinlua.lua  config.lua  f.lua
simpleExamples/: CMakeLists.txt  main.cpp  main2.cpp  run.sh
